welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while (!fin()){serpent()}
         ^SnakeBuggle:8: error: value est is not a member of object plm.universe.Direction
  else if (getDirection()==Direction.est){gauche()
                                     ^SnakeBuggle:18: error: value est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.est){
                                  ^SnakeBuggle:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:20: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:23: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^SnakeBuggle:25: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^